test/files/pos/inline-access-levels/Test_2.scala
package test

object Test {

  def main(args: Array[String]) {

    A.actOnX(_ + 1)

    val a = new A

    a.actOnX(_ + 1)

  }
}
